# ads

./: .gitignore  CMakeLists.txt  README.md  building.txt
ads/: CMakeLists.txt  algebra.h  calculus.h  core.h  geometry.h  graphs.h  main.cpp  mathematics.h  numberTheory.h  statistics.h
ads/headers/: algebra.h  calculus.h  core.h  geometry.h  graphs.h  mathematics.h  numberTheory.h  number_theory.h  statistics.h
ads/headers/geometry/: curve.hpp  default_curves.hpp  geometry.h  matrix.hpp  plane.hpp  splains.hpp  vector.hpp
ads/headers/mathematics/: algebra.h  mathematics.h
ads/headers/mathematics/geometry/: curve.hpp  default_curves.hpp  matrix.hpp  plane.hpp  polygon.hpp  polyline.hpp  vector.hpp
ads/headers/message_resender/: broker.hpp  multi_queue.hpp
ads/headers/parallel_structures/: concurrent_queue.h  concurrent_stack.h
tests/: CMakeLists.txt  entry.cpp
tests/ads/: algebra.cpp  algebra.h  calculus.cpp  calculus.h  concurrent_stack.cpp  main.cpp  multi_queue.cpp
tests/ads/geometry/: curve.cpp  matrix.cpp  vector.cpp
tests/cmake/: GTestsPrepare.cmake  TestSuits.cmake
